# cpp-tdd-en

./: .gitattributes  .gitignore
code/completed/: CMakeLists.txt
code/completed/adventure/v1/: CMakeLists.txt
code/completed/builder/: CMakeLists.txt  window.cpp  window.h  window_builder.cpp  window_builder.h  window_main.cpp  window_test.cpp
code/completed/catch2_intro/basics/: CMakeLists.txt  catch2_basics.cpp
code/completed/catch2_intro/leap_year/: CMakeLists.txt  leap_year.cpp  leap_year_scenario_test.cpp  leap_year_test.cpp
code/completed/catch2_intro/order/: CMakeLists.txt  item.cpp  item.h  item_scenario_test.cpp  item_test.cpp  order.cpp  order_scenario_test.cpp  order_test.cpp
code/completed/error_handling/: CMakeLists.txt  expected.cpp  expected.h  expected_main.cpp
code/completed/fizz_buzz/: CMakeLists.txt  fizz_buzz.cpp  fizz_buzz.h  fizz_buzz_main.cpp  fizz_buzz_test.cpp
code/completed/invoice/v0/: README.md
code/completed/order_processor/: CMakeLists.txt  main.cpp
code/completed/order_processor/lib/: CMakeLists.txt  non_testable_order_processor.cpp  non_testable_order_processor.h  order.h  testable_order_processor.cpp  testable_order_processor.h
code/completed/order_processor/test/: CMakeLists.txt  cout_redirect.h  non_testable_order_processor_test.cpp  testable_order_processor_test.cpp
code/completed/prime_factors/: CMakeLists.txt  prime_factors.cpp  prime_factors.h  prime_factors_main.cpp  prime_factors_test.cpp
code/completed/project_adventure/: .clang-format  CMakeLists.txt  main.cpp
code/completed/project_adventure/data/: dungeon.json  minimalGame.json  simpleGame.json
code/completed/project_adventure/lib/: CMakeLists.txt  action.cpp  action.h  game.cpp  game.h  room.cpp  room.h
code/completed/project_adventure/test/: CMakeLists.txt  acceptance_tests.cpp  fixtures.cpp  fixtures.h  test_utils.cpp  test_utils.h  unit_tests_section_1.cpp
code/completed/recipes/: CMakeLists.txt  recipes.cpp  recipes.h  recipes_main.cpp  recipes_test.cpp
code/completed/salaries/: CMakeLists.txt  salaries.cpp  salaries.h  salaries_main.cpp
code/completed/simple_refactoring/: .clang-format  CMakeLists.txt  main.cpp
code/completed/simple_refactoring/lib/: CMakeLists.txt  orders.cpp  orders.h
code/completed/simple_refactoring/test/: CMakeLists.txt  orders_test.cpp
code/completed/singleton/: CMakeLists.txt  singleton.cpp  singleton.h  singleton_main.cpp  singleton_thread_test.cpp
code/completed/test_examples/: CMakeLists.txt  cout_redirect.h  fun_state_interact.cpp  fun_state_interact.h  fun_state_interact_test.cpp  state_machine.h  state_machine_test.cpp
code/completed/two_loop_cycle/: .clang-format  CMakeLists.txt  main.cpp
code/completed/two_loop_cycle/lib/: CMakeLists.txt  task.cpp  task.h  todo_list.cpp  todo_list.h
code/completed/two_loop_cycle/test/: CMakeLists.txt  acceptance_tests.cpp  unit_tests.cpp
code/completed/user_registration/: CMakeLists.txt  main.cpp
code/completed/user_registration/lib/: CMakeLists.txt  user_registration_service.cpp  user_registration_service.h
code/completed/user_registration/test/: CMakeLists.txt  user_registration_test.cpp
code/completed/virtual_university/: Assignment.h  AssignmentTest.cpp  CMakeLists.txt  Lecture.cpp  Lecture.h  LectureTest.cpp  ProfessorTest.cpp  Student.cpp  StudentTest.cpp  Submission.cpp  SubmissionTest.cpp  University.cpp  UniversityTest.cpp
code/starter_kits/: CMakeLists.txt
code/starter_kits/adventure_sk/: CMakeLists.txt
code/starter_kits/catch2_intro_sk/: CMakeLists.txt
code/starter_kits/catch2_intro_sk/basics/: CMakeLists.txt  catch2_basics.cpp
code/starter_kits/catch2_intro_sk/leap_year/: CMakeLists.txt  leap_year.h  leap_year_scenario_test.cpp  leap_year_test.cpp
code/starter_kits/catch2_intro_sk/order/: CMakeLists.txt  item.h  item_scenario_test.cpp  item_test.cpp  order.h  order_scenario_test.cpp  order_test.cpp
code/starter_kits/fizz_buzz_sk/: CMakeLists.txt  fizz_buzz.cpp  fizz_buzz.h  fizz_buzz_main.cpp  fizz_buzz_test.cpp
code/starter_kits/order_processor_sk/: CMakeLists.txt  main.cpp  orders.txt
code/starter_kits/order_processor_sk/lib/: CMakeLists.txt  non_testable_order_processor.cpp  non_testable_order_processor.h  order.h  testable_order_processor.cpp  testable_order_processor.h
code/starter_kits/order_processor_sk/test/: CMakeLists.txt  cout_redirect.h  non_testable_order_processor_test.cpp  testable_order_processor_test.cpp
code/starter_kits/prime_factors_sk/: CMakeLists.txt  prime_factors.cpp  prime_factors.h  prime_factors_main.cpp  prime_factors_test.cpp
code/starter_kits/project_adventure_sk/: CMakeLists.txt  main.cpp
code/starter_kits/project_adventure_sk/data/: dungeon.json  simpleGame.json
code/starter_kits/project_adventure_sk/lib/: CMakeLists.txt  Direction.cpp  Direction.h  Game.cpp  Game.h  Inventory.h  Map.cpp  Map.h  Player.cpp  Player.h  Room.cpp  Room.h  project_adventure_sk.cpp  project_adventure_sk.h
code/starter_kits/project_adventure_sk/test/: CMakeLists.txt  project_adventure_sk_test.cpp
code/starter_kits/recipes_sk/: CMakeLists.txt  recipes_sk.cpp  recipes_sk.h  recipes_sk_main.cpp  recipes_sk_test.cpp
code/starter_kits/refactoring_lms_sk/: .clang-format  CMakeLists.txt  main.cpp
code/starter_kits/refactoring_lms_sk/lib/: CMakeLists.txt  book.cpp  (+9 more)
code/starter_kits/salaries_sk/: CMakeLists.txt  salaries_sk.cpp  salaries_sk.h  salaries_sk_main.cpp
code/starter_kits/simple_refactoring_sk/: CMakeLists.txt  main.cpp
code/starter_kits/spacecraft_controller_sk/: CMakeLists.txt  main.cpp
code/starter_kits/testability_sk/: .clang-format  CMakeLists.txt  main.cpp
code/starter_kits/two_loop_cycle_sk/: CMakeLists.txt  main.cpp
code/starter_kits/user_registration_sk/: .gitignore  CMakeLists.txt  main.cpp
code/starter_kits/vending_machine_sk/: CMakeLists.txt  main.cpp
code/starter_kits/virtual_university_sk/: Assignment.cpp  CMakeLists.txt  LectureTest.cpp  Professor.cpp  Professor.h  ProfessorTest.cpp  Student.h  Submission.h  SubmissionTest.cpp  University.h  UniversityTest.cpp  main.cpp
(+260 files in other folders)
